# token-challenge

./: README.md  pyproject.toml  sentences.json
src/tokenizer/: __main__.py
